# AnaFlow

./: .coverage  .coveragerc  .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  make.bat  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
.github/workflows/: main.yml
.spyproject/: workspace.ini
anaflow/: __init__.py  _version.py  gwsolutions.py  helper.py  laplace.py
anaflow/flow/: Neuman.py  __init__.py  ext_grf.py  ext_grf_model.py  helper.py  heterogeneous.py  homogeneous.py  laplace.py  special.py
anaflow/tools/: __init__.py  coarse_graining.py  laplace.py  mean.py  special.py
anaflow/transport/: __init__.py  concentration.py
docs/: Makefile  make.bat  requirements.txt
docs/source/: anaflow.rst  anaflow.rst~  api.rst  changelog.rst  conf.py  contents.rst  flow.ext_grf.rst  flow.ext_grf_model.rst  flow.heterogeneous.rst  flow.homogeneous.rst  flow.laplace.rst  flow.rst  flow.special.rst  gwsol.rst  helper.rst  index.rst  laplace.rst  main.rst  modules.rst~  package.rst  tools.coarse_graining.rst  tools.laplace.rst  tools.mean.rst  tools.rst  tools.special.rst  tutorial_01_call.rst  tutorial_02_extended_theis.rst  tutorial_03_extended_theis3d.rst  tutorial_04_ext_theis_tpl.rst  tutorial_05_neuman2004.rst  tutorial_06_comparison.rst  tutorial_07_convergence.rst  tutorial_08_advanced.rst  tutorials.rst
docs/source/_templates/: layout.html
docs/source/examples/: 01_call_theis.ipynb  01_call_theis.py  01_call_theis.py.md5  01_call_theis.rst  01_call_theis_codeobj.pickle  02_call_ext_theis2d.ipynb  02_call_ext_theis2d.py.md5  02_call_ext_theis2d.rst  02_call_ext_theis2d_codeobj.pickle  03_call_ext_theis3d.ipynb  03_call_ext_theis3d.py  03_call_ext_theis3d.py.md5  03_call_ext_theis3d.rst  03_call_ext_theis3d_codeobj.pickle  04_call_ext_theis_tpl.ipynb  04_call_ext_theis_tpl.py  04_call_ext_theis_tpl.py.md5  04_call_ext_theis_tpl.rst  04_call_ext_theis_tpl_codeobj.pickle  05_call_neuman2004.ipynb  05_call_neuman2004.py.md5  05_call_neuman2004.rst  05_call_neuman2004_codeobj.pickle  06_compare_extthiem2d_grfsteady.ipynb  06_compare_extthiem2d_grfsteady.py.md5  06_compare_extthiem2d_grfsteady.rst  06_compare_extthiem2d_grfsteady_codeobj.pickle  07_compare_extthiem3d_grfsteady.ipynb  07_compare_extthiem3d_grfsteady.py  07_compare_extthiem3d_grfsteady.py.md5  07_compare_extthiem3d_grfsteady.rst  07_compare_extthiem3d_grfsteady_codeobj.pickle  08_compare_extthiem2d_neuman.ipynb  08_compare_extthiem2d_neuman.py  08_compare_extthiem2d_neuman.py.md5  08_compare_extthiem2d_neuman.rst  08_compare_extthiem2d_neuman_codeobj.pickle  09_compare_exttheis2d_neuman.ipynb  09_compare_exttheis2d_neuman.py.md5  09_compare_exttheis2d_neuman.rst  (+32 more)
examples/: 01_call_theis.py  02_call_ext_theis.py  02_call_ext_theis2d.py  03_call_ext_theis3d.py  04_call_ext_theis_tpl.py  05_call_neuman2004.py  06_compare_extthiem2d_grfsteady.py  07_compare_extthiem3d_grfsteady.py  08_compare_extthiem2d_neuman.py  08_compare_thiem_grfsteady.py  09_compare_exttheis2d_neuman.py  09_compare_extthiem2d_neuman.py  10_compare_exttheis2d_neuman.py  10_convergence_ext_theis_tpl.py  11_convergence_ext_grf.py  12_compare_theis_quasi_steady.py  13_self_defined_transmissivity.py  14_interval_theis.py  15_accruing_theis.py  16_integral_model.py  17_compare_nugget.py  18_compare_roughness.py  19_convergence_ext_theis_int.py  README.rst
source/: conf.py  index.rst
src/anaflow/: __init__.py
src/anaflow/flow/: __init__.py  ext_grf_model.py  heterogeneous.py  homogeneous.py  laplace.py
src/anaflow/tools/: __init__.py  coarse_graining.py  laplace.py  mean.py  special.py
tests/: test_anaflow.py
