[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=7",
]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.7"
name = "anaflow"
authors = [{name = "Sebastian Mueller", email = "sebastian.mueller@ufz.de"}]
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
description = "AnaFlow - analytical solutions for the groundwater-flow equation."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.14.5",
    "pentapy>=1.1.0",
    "scipy>=1.1.0",
]

[project.optional-dependencies]
doc = [
    "m2r2>=0.2.8",
    "matplotlib>=3",
    "numpydoc>=1.1",
    "sphinx>=4",
    "sphinx-gallery>=0.8",
    "sphinx-rtd-theme>=1,<1.1",
]
test = ["pytest-cov>=3"]
check = [
  "black>=24,<25",
  "isort[colors]<6",
  "pylint",
]

[project.urls]
Homepage = "https://github.com/GeoStat-Framework/AnaFlow"
Documentation = "https://anaflow.readthedocs.io"
Source = "https://github.com/GeoStat-Framework/anaflow"
Tracker = "https://github.com/GeoStat-Framework/anaflow/issues"
Changelog = "https://github.com/GeoStat-Framework/anaflow/blob/main/CHANGELOG.md"
Conda-Forge = "https://anaconda.org/conda-forge/anaflow"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools_scm]
write_to = "src/anaflow/_version.py"
write_to_template = "__version__ = '{version}'"
local_scheme = "no-local-version"
fallback_version = "0.0.0.dev0"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
exclude = "_version.py"
target-version = ["py37"]

[tool.coverage]
    [tool.coverage.run]
    source = ["anaflow"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "if __name__ == '__main__':",
        "def __repr__",
        "def __str__",
    ]

[tool.pylint]
    [tool.pylint.master]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
    ]
    ignore = "_version.py"

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 25
    max-locals = 50
    max-branches = 30
    max-statements = 80
    max-attributes = 25
    max-public-methods = 75
