[build-system]
requires = [
    "hatchling>=1.8.0",
    "hatch-vcs",
]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.8"
name = "anaflow"
authors = [{name = "Sebastian Mueller", email = "sebastian.mueller@ufz.de"}]
readme = "README.md"
license = "MIT"
dynamic = ["version"]
description = "AnaFlow - analytical solutions for the groundwater-flow equation."
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "numpy>=1.14.5",
    "pentapy>=1.1.0",
    "scipy>=1.1.0",
]

[project.optional-dependencies]
doc = [
    "myst-parser",
    "matplotlib>=3.7",
    "numpydoc>=1.1",
    "sphinx>=7",
    "sphinx-gallery>=0.8",
    "sphinx-rtd-theme>=3",
]
test = ["pytest-cov>=3"]
check = [
  "black>=25",
  "isort[colors]",
  "pylint",
]

[project.urls]
Homepage = "https://github.com/GeoStat-Framework/AnaFlow"
Documentation = "https://anaflow.readthedocs.io"
Source = "https://github.com/GeoStat-Framework/anaflow"
Tracker = "https://github.com/GeoStat-Framework/anaflow/issues"
Changelog = "https://github.com/GeoStat-Framework/anaflow/blob/main/CHANGELOG.md"
Conda-Forge = "https://anaconda.org/conda-forge/anaflow"

[tool.hatch.version]
source = "vcs"
fallback_version = "0.0.0.dev0"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/anaflow/_version.py"
template = "__version__ = '{version}'"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anaflow"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
]

[tool.coverage]
    [tool.coverage.run]
    source = ["anaflow"]
    omit = [
        "*docs*",
        "*examples*",
        "*tests*",
    ]

    [tool.coverage.report]
    exclude_lines = [
        "pragma: no cover",
        "if __name__ == '__main__':",
        "def __repr__",
        "def __str__",
    ]

[tool.pylint]
    [tool.pylint.master]
    extension-pkg-whitelist = [
        "numpy",
        "scipy",
    ]
    ignore = "_version.py"

    [tool.pylint.message_control]
    disable = [
        "R0801",
    ]

    [tool.pylint.reports]
    output-format = "colorized"

    [tool.pylint.design]
    max-args = 25
    max-locals = 50
    max-branches = 30
    max-statements = 80
    max-attributes = 25
    max-public-methods = 75
