[metadata]
name = anaflow
description = AnaFlow - analytical solutions for the groundwater-flow equation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GeoStat-Framework/AnaFlow
author = Sebastian Mueller
author_email = sebastian.mueller@ufz.de
maintainer = Sebastian Mueller
maintainer_email = sebastian.mueller@ufz.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://anaflow.readthedocs.io
    Source = https://github.com/GeoStat-Framework/anaflow
    Tracker = https://github.com/GeoStat-Framework/anaflow/issues
    Changelog = https://github.com/GeoStat-Framework/anaflow/blob/main/CHANGELOG.md
    Conda-Forge = https://anaconda.org/conda-forge/anaflow

[options]
packages = find:
install_requires =
    numpy>=1.14.5,<2
    pentapy>=1.1.0,<2
    scipy>=1.1.0,<2
python_requires = >=3.6
zip_safe = False

[options.packages.find]
exclude =
    tests*
    docs*

[options.extras_require]
doc =
    numpydoc>=1.1
    sphinx>=3
    sphinx-gallery>=0.8
    sphinx-rtd-theme>=0.5
test =
    coverage[toml]>=5.2.1
    pytest>=6.0
    pytest-cov>=2.11.0
